Show link to account on tablets in top right navbar [fixes #157477995]

--- a/app/assets/stylesheets/spree/frontend/_helpers.sass
+++ b/app/assets/stylesheets/spree/frontend/_helpers.sass
@@ -12,6 +12,10 @@
   .margin-text-#{$side}
     margin-#{$side}: 7px
 
+.margin-text-horizont-eq
+  margin-left: 7px
+  margin-right: 7px
+
 .nowrap
   white-space: nowrap
 
